[gd_scene load_steps=3 format=3 uid="uid://dyfqxa4mnhf7h"]

[ext_resource type="Script" uid="uid://wkq47nfao8g2" path="res://scenes/multiplayer_menu.gd" id="1_huwya"]
[ext_resource type="PackedScene" uid="uid://cbj2jgdcepx47" path="res://scenes/bubbles/bubble_view.tscn" id="2_326qw"]

[node name="MultiplayerMenu" type="Control" node_paths=PackedStringArray("ip_address_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_huwya")
ip_address_edit = NodePath("CenterContainer/VBoxContainer/IPAdressEdit")
main_scene = ExtResource("2_326qw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ScreenButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Screen"

[node name="FloorFrontButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Floor Front"

[node name="FloorBackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Floor Back"

[node name="IPAdressEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Screen Address"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ScreenButton" to="." method="_on_screen_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/FloorFrontButton" to="." method="_on_floor_front_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/FloorBackButton" to="." method="_on_floor_back_button_pressed"]
